--- a/components.json
+++ b/components.json
@@ -13,7 +13,8 @@
 
   "aliases": {
     "components": "@/components",
-    "utils": "@/lib/utils"
+    "utils": "@/lib/utils",
+     "hi":true
   }
 
 }
